--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "visualization-tool",
-	"version": "0.1.0",
+	"version": "1.0.0",
 	"private": true,
-	"homepage": "https://csvistool.com/",
+	"homepage": "https://visualization-squirrel.vercel.app/",
 	"dependencies": {
 		"@material-ui/core": "^4.7.2",
 		"gh-pages": "^2.1.1",
